--- a/midterms/midterms/ejs/views/index.ejs
+++ b/midterms/midterms/ejs/views/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"> <title><%= title %></title>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <h1>Welcome to <%= title %>!</h1>
