--- a/midterms/midterms/ejs/views/index.ejs
+++ b/midterms/midterms/ejs/views/index.ejs
@@ -6,7 +6,14 @@
 </head>
 <body>
   <h1>Welcome to <%= title %>!</h1>
-  <h2>My name is Jazper Garcia</h2>
-  <h2>WD-201</h2>
+  <h2>Name: Jazper Garcia</h2>
+  <h2>Phone Number: 0999 111 1111</h2>
+  <h2>Skills:</h2>
+  <ul>
+    <ol>Python</ol>
+    <ol>Java</ol>
+    <ol>CSS</ol>
+    <ol>HTML</ol>
+  </ul>
 </body>
 </html>
